--- a/knowledge-base-manifest.yaml
+++ b/knowledge-base-manifest.yaml
@@ -8,32 +8,38 @@ collections:
     directory: docs
     description: A model repository for bioimage analysis.
     base_url: https://bioimage.io/docs/#/
+    format: markdown
   - name: imagej.net
     id: imagej.net
     source: https://github.com/imagej/imagej.github.io/archive/7bdb57db2f0c616a21742611f534bbe2fd215416.zip
     directory: _pages
     description: The ImageJ wiki with a lot of useful information about ImageJ, Fiji and related plugins and tools.
     base_url: https://imagej.net
+    format: markdown
   - name: bio.tools
     id: bio.tools
     source: https://github.com/research-software-ecosystem/content/archive/refs/heads/master.zip
     directory: data
     description: A repository for research software tools with metadata.
     base_url: https://bio.tools
+    format: json  
   - name: ImJoy
     id: imjoy
     source: https://github.com/imjoy-team/ImJoy/archive/refs/heads/master.zip
     directory: docs
     description: A plugin powered hybrid computing platform for deploying deep learning applications such as advanced image analysis tools.
     base_url: https://imjoy.io/docs/#/
+    format: markdown
   - name: deepImageJ
     id: deepimagej
     source: https://s3.imjoy.io/public-datasets/deepimagej-plugin.wiki.zip
     directory: "."
     description: The ImageJ plugin to run deep-learning models
     base_url: https://deepimagej.github.io/
+    format: markdown
   - name: scikit-image
     id: scikit-image
     source: https://raw.githubusercontent.com/oeway/hypha-knowledge-base/gh-pages/scikit-image-0.21.0.pdf
     description: A collection of algorithms for image processing.
     base_url: https://scikit-image.org/docs/stable/
+    format: pdf
