--- a/knowledge-base-manifest.yaml
+++ b/knowledge-base-manifest.yaml
@@ -14,7 +14,7 @@ collections:
     source: https://github.com/bioimage-io/bioimage.io/archive/refs/heads/main.zip
     directory: docs
     description: A model repository for bioimage analysis.
-    base_url: https://bioimage.io/docs/#/
+    base_url: https://bioimage.io/docs/
     format: markdown
   - name: imagej.net
     id: imagej.net
