--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,15 +27,21 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
-      - name: Build vector database
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      - name: Run Init
+        run: python -m bioimageio_chatbot init
+      - name: Test server
         run: |
-          python -m bioimageio_chatbot create-knowledge-base --output-dir=./dist/bioimageio-knowledge-base
-        env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_SECRET_API_KEY }}
-      - name: Deploy
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+        export OPENAI_API_KEY=sk-xxxxxxxx
+        python -m bioimageio_chatbot start-server --host=0.0.0.0 --port=9000 & wget http://127.0.0.1:9000/public/apps/bioimageio-chatbot-client/index
+      # - name: Build vector database
+      #   if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      #   run: |
+      #     python -m bioimageio_chatbot create-knowledge-base --output-dir=./dist/bioimageio-knowledge-base
+      #   env:
+      #     OPENAI_API_KEY: ${{ secrets.OPENAI_SECRET_API_KEY }}
+      # - name: Deploy
+      #   if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      #   uses: peaceiris/actions-gh-pages@v3
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     publish_dir: ./dist
