--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel"]
 
 [project]
 name = "bioimageio-chatbot"
-version = "0.1.46"
+version = "0.1.47"
 readme = "README.md"
 description = "Your Personal Assistant in BioImage Analysis."
 dependencies = [
@@ -15,6 +15,7 @@ dependencies = [
   "tqdm",
   "aiofiles",
   "langchain>=0.0.335",
+  "datamodel-code-generator",
 ]
 
 [tool.setuptools]
