--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel"]
 
 [project]
 name = "bioimageio-chatbot"
-version = "0.1.47"
+version = "0.1.48"
 readme = "README.md"
 description = "Your Personal Assistant in BioImage Analysis."
 dependencies = [
@@ -16,6 +16,7 @@ dependencies = [
   "aiofiles",
   "langchain>=0.0.335",
   "datamodel-code-generator",
+  "beautifulsoup4",
 ]
 
 [tool.setuptools]
