add bs4 and pandas

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel"]
 
 [project]
 name = "bioimageio-chatbot"
-version = "0.1.48"
+version = "0.1.49"
 readme = "README.md"
 description = "Your Personal Assistant in BioImage Analysis."
 dependencies = [
@@ -17,6 +17,7 @@ dependencies = [
   "langchain>=0.0.335",
   "datamodel-code-generator",
   "beautifulsoup4",
+  "pandas",
 ]
 
 [tool.setuptools]
