--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel"]
 
 [project]
 name = "bioimageio-chatbot"
-version = "0.1.52"
+version = "0.1.53"
 readme = "README.md"
 description = "Your Personal Assistant in BioImage Analysis."
 dependencies = [
@@ -14,9 +14,13 @@ dependencies = [
   "hypha",
   "tqdm",
   "aiofiles",
-  "langchain>=0.0.335",
+  "langchain>=0.1.6",
   "beautifulsoup4",
   "pandas",
+  "duckduckgo-search<=4.2.0",
+  "rank-bm25",
+  "langchain-openai",
+  "langchain-community",
 ]
 
 [tool.setuptools]
