--- a/knowledge-base-manifest.yaml
+++ b/knowledge-base-manifest.yaml
@@ -50,6 +50,7 @@ collections:
     description: A collection of algorithms for image processing.
     base_url: https://scikit-image.org/docs/stable/
     format: pdf
+
   - name: Introduction to Bioimage Analysis
     id: book-intro-to-bioimage-analysis
     source: https://github.com/bioimagebook/bioimagebook.github.io/archive/refs/heads/main.zip
@@ -74,6 +75,30 @@ collections:
     source: https://raw.githubusercontent.com/oeway/hypha-knowledge-base/gh-pages/bioimagedataanalysis-compressed.pdf
     description: "A book written by Kota Miura about bioimage data analysis"
     base_url: https://analyticalscience.wiley.com/content/article-do/bioimage-data-analysis
+    format: pdf
+  - name: Deep Learning in Medical Imaging
+    id: book-deep-learning-in-medical-imaging
+    source: https://raw.githubusercontent.com/oeway/hypha-knowledge-base/gh-pages/Deep%20Learning%20in%20Medical%20Imaging.pdf
+    description: "A book written by Daniel K. Sodickson, MD, PhD, and W. Clem Karl, PhD about deep learning in medical imaging"
+    base_url: https://www.rsna.org/-/media/Files/RSNA/Education/RSNA-Press/Deep-Learning-in-Medical-Imaging.pdf
+    format: pdf
+  - name: FUTURE AI International consensus guideline for trustworthy and deployable artificial intelligence in healthcare
+    id: book-future-ai-international-consensus-guideline-for-trustworthy-and-deployable-artificial-intelligence-in-healthcare
+    source: https://raw.githubusercontent.com/oeway/hypha-knowledge-base/gh-pages/FUTURE%20AI%20International%20consensus%20guideline%20for%20trustworthy%20and%20deployable%20artificial%20intelligence%20in%20healthcare.pdf
+    description: "A book written by the FUTURE AI consortium about international consensus guideline for trustworthy and deployable artificial intelligence in healthcare"
+    base_url: https://www.nature.com/articles/s41591-021-01412-4
+    format: pdf
+  - name: Roadmap on Deep Learning for Microscopy-compressed
+    id: book-roadmap-on-deep-learning-for-microscopy
+    source: https://raw.githubusercontent.com/oeway/hypha-knowledge-base/gh-pages/Roadmap%20on%20Deep%20Learning%20for%20Microscopy-compressed.pdf
+    description: "A book written by the FUTURE AI consortium about international consensus guideline for trustworthy and deployable artificial intelligence in healthcare"
+    base_url: https://www.nature.com/articles/s41592-021-01108-9
+    format: pdf
+  - name: The Rise of Data-Driven Microscopy powered by Machine Learning
+    id: book-the-rise-of-data-driven-microscopy-powered-by-machine-learning
+    source: https://raw.githubusercontent.com/oeway/hypha-knowledge-base/gh-pages/The%20Rise%20of%20Data-Driven%20Microscopy%20powered%20by%20Machine%20Learning.pdf
+    description: "A book written by the FUTURE AI consortium about international consensus guideline for trustworthy and deployable artificial intelligence in healthcare"
+    base_url: https://www.nature.com/articles/s41592-021-01108-9
     format: pdf
 
 additional_channels:
