--- a/knowledge-base-manifest.yaml
+++ b/knowledge-base-manifest.yaml
@@ -50,7 +50,6 @@ collections:
     description: A collection of algorithms for image processing.
     base_url: https://scikit-image.org/docs/stable/
     format: pdf
-
   - name: Introduction to Bioimage Analysis
     id: book-itba
     source: https://github.com/bioimagebook/bioimagebook.github.io/archive/refs/heads/main.zip
@@ -59,13 +58,13 @@ collections:
     base_url: https://bioimagebook.github.io/
     format: markdown
   - name: Deep Learning for Medical Image Analysis
-    id: book-dlmia
+    id: book-dlfmia
     source: https://raw.githubusercontent.com/oeway/hypha-knowledge-base/gh-pages/deep-learning-for-medical-image-analysis-1nbsped-0128104082-978-0-12-810408-8_compress.pdf
     description: "A book written by S. Kevin Zhou, Hayit Greenspan, Dinggang Shen about deep learning for medical image analysis"
     base_url: https://www.elsevier.com/books/deep-learning-for-medical-image-analysis/zhou/978-0-12-810408-8
     format: pdf
   - name: How deep learning is used within microscopy
-    id: book-hdliuwm
+    id: book-hdluwm
     source: https://raw.githubusercontent.com/oeway/hypha-knowledge-base/gh-pages/Nikon-Deep-Learning-ebook-compressed.pdf
     description: "A book written by Nikon about how deep learning is used within microscopy"
     base_url: https://www.microscope.healthcare.nikon.com/en_EU/products/software/deep-learning
@@ -77,29 +76,30 @@ collections:
     base_url: https://analyticalscience.wiley.com/content/article-do/bioimage-data-analysis
     format: pdf
   - name: Deep Learning in Medical Imaging
-    id: book-dlimi
+    id: book-dlmi
     source: https://raw.githubusercontent.com/oeway/hypha-knowledge-base/gh-pages/Deep%20Learning%20in%20Medical%20Imaging.pdf
     description: "A book written by Daniel K. Sodickson, MD, PhD, and W. Clem Karl, PhD about deep learning in medical imaging"
     base_url: https://www.rsna.org/-/media/Files/RSNA/Education/RSNA-Press/Deep-Learning-in-Medical-Imaging.pdf
     format: pdf
   - name: FUTURE AI International consensus guideline for trustworthy and deployable AI in healthcare
-    id: book-faicgftadaih
+    id: book-fat
     source: https://raw.githubusercontent.com/oeway/hypha-knowledge-base/gh-pages/FUTURE%20AI%20International%20consensus%20guideline%20for%20trustworthy%20and%20deployable%20artificial%20intelligence%20in%20healthcare.pdf
     description: "A book written by the FUTURE AI consortium about international consensus guideline for trustworthy and deployable artificial intelligence in healthcare"
     base_url: https://www.nature.com/articles/s41591-021-01412-4
     format: pdf
   - name: Roadmap on Deep Learning for Microscopy
-    id: book-rodlfm
+    id: book-rdlfm
     source: https://raw.githubusercontent.com/oeway/hypha-knowledge-base/gh-pages/Roadmap%20on%20Deep%20Learning%20for%20Microscopy-compressed.pdf
     description: "A book written by the FUTURE AI consortium about international consensus guideline for trustworthy and deployable artificial intelligence in healthcare"
     base_url: https://www.nature.com/articles/s41592-021-01108-9
     format: pdf
   - name: The Rise of Data-Driven Microscopy powered by Machine Learning
-    id: book-troddmpml
+    id: book-tddmpml
     source: https://raw.githubusercontent.com/oeway/hypha-knowledge-base/gh-pages/The%20Rise%20of%20Data-Driven%20Microscopy%20powered%20by%20Machine%20Learning.pdf
     description: "A book written by the FUTURE AI consortium about international consensus guideline for trustworthy and deployable artificial intelligence in healthcare"
     base_url: https://www.nature.com/articles/s41592-021-01108-9
     format: pdf
+
 
 additional_channels:
   - name: "biii.eu"
