--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install -U twine
         python -m pip install -U wheel
-        python3 -m pip install --upgrade build
+        python3 -m pip install build==1.0.3 # pin build
         rm -rf ./build
         rm -rf ./dist/*
         python3 -m build
