--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 description = "Your Personal Assistant in BioImage Analysis."
 dependencies = [
   "schema-agents>=0.1.42",
-  "imjoy-rpc",
+  "imjoy-rpc>=0.5.48",
   "requests",
   "pypdf",
   "hypha",
