--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ version = "0.1.70"
 readme = "README.md"
 description = "Your Personal Assistant in BioImage Analysis."
 dependencies = [
-  "schema-agents>=0.1.42",
-  "imjoy-rpc>=0.5.48",
+  "schema-agents>=0.1.43",
+  "imjoy-rpc>=0.5.48.post1",
   "requests",
   "pypdf",
   "hypha",
