--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@ readme = "README.md"
 description = "Your Personal Assistant in BioImage Analysis."
 dependencies = [
   "schema-agents>=0.1.38",
-  "imjoy-rpc",
+  "imjoy-rpc>=0.5.48.post1",
   "requests",
   "pypdf",
-  "hypha",
+  "hypha>=0.15.47",
   "tqdm",
   "aiofiles",
   "langchain>=0.1.6",
