--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel"]
 
 [project]
 name = "bioimageio-chatbot"
-version = "0.1.73"
+version = "0.1.74"
 readme = "README.md"
 description = "Your Personal Assistant in BioImage Analysis."
 dependencies = [
@@ -17,7 +17,7 @@ dependencies = [
   "langchain>=0.1.6",
   "beautifulsoup4",
   "pandas",
-  "duckduckgo-search<=4.2.0",
+  "duckduckgo-search>=5.0",
   "rank-bm25",
   "langchain-openai",
   "langchain-community",
