--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["setuptools", "wheel"]
 
 [project]
 name = "bioimageio-chatbot"
-version = "0.1.95"
+version = "0.1.96"
 readme = "README.md"
-description = "Your Personal Assistant in BioImage Analysis."
+description = "Your Personal Assistant in Computational BioImaging."
 dependencies = [
   "schema-agents>=0.1.49",
   "imjoy-rpc>=0.5.48.post2",
