--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel"]
 
 [project]
 name = "bioimageio-chatbot"
-version = "0.2.12"
+version = "0.2.13"
 readme = "README.md"
 description = "Your Personal Assistant in Computational BioImaging."
 dependencies = [
@@ -13,7 +13,7 @@ dependencies = [
   "pypdf",
   "pillow",
   "matplotlib",
-  "hypha>=0.15.52,<0.20.0",
+  "hypha>=0.20.38.post19",
   "tqdm",
   "aiofiles",
   "langchain>=0.1.6",
